force-app/main/default/objects/Address__c/fields/Address_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Address_Geolocation__c</fullName>
    <description>Geolocation coordinates for the address.</description>
    <inlineHelpText>Geolocation coordinates for the address.</inlineHelpText>
    <label>Address Geolocation</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>