force-app/main/default/objects/Address__c/fields/Address_Id__c.field-meta.xml
<CustomField>
    <fullName>Address_Id__c</fullName>
    <externalId>true</externalId>
    <label>Address Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>