force-app/main/default/objects/Address__c/fields/Address_Status_Name__c.field-meta.xml
<CustomField>
    <fullName>Address_Status_Name__c</fullName>
    <label>Address Status Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>