force-app/main/default/objects/Address__c/fields/Calc_Drop_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Calc_Drop_Status_Code__c</fullName>
    <label>Calc Drop Status Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>