force-app/main/default/objects/Address__c/fields/CBS_Drop_Address__c.field-meta.xml
<CustomField>
    <fullName>CBS_Drop_Address__c</fullName>
    <label>CBS Drop Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>