force-app/main/default/objects/Address__c/fields/CBS_Drop_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>CBS_Drop_Status_Code__c</fullName>
    <label>CBS Drop Status Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>