force-app/main/default/objects/Address__c/fields/CBS_Drop_Status_Name__c.field-meta.xml
<CustomField>
    <fullName>CBS_Drop_Status_Name__c</fullName>
    <label>CBS Drop Status Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>