force-app/main/default/objects/Address__c/fields/Civic_Address__c.field-meta.xml
<CustomField>
    <fullName>Civic_Address__c</fullName>
    <label>Civic Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>