force-app/main/default/objects/Address__c/fields/Civic_Address_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Civic_Address_Suffix__c</fullName>
    <label>Civic Address Suffix</label>
    <length>80</length>
    <type>Text</type>
</CustomField>