force-app/main/default/objects/Address__c/fields/Date_Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Date_Effective_From__c</fullName>
    <label>Date Effective From</label>
    <type>Date</type>
</CustomField>