force-app/main/default/objects/Address__c/fields/Date_Effective_Thru__c.field-meta.xml
<CustomField>
    <fullName>Date_Effective_Thru__c</fullName>
    <label>Date Effective Thru</label>
    <type>Date</type>
</CustomField>