force-app/main/default/objects/Address__c/fields/Do_Not_Knock__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Knock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do Not Knock</description>
    <label>Do Not Knock</label>
    <type>Checkbox</type>
</CustomField>