force-app/main/default/objects/Address__c/fields/Drop_Branch_BK__c.field-meta.xml
<CustomField>
    <fullName>Drop_Branch_BK__c</fullName>
    <label>Drop Branch BK</label>
    <length>80</length>
    <type>Text</type>
</CustomField>