force-app/main/default/objects/Address__c/fields/Drop_CBS_Branch__c.field-meta.xml
<CustomField>
    <fullName>Drop_CBS_Branch__c</fullName>
    <label>Drop CBS Branch</label>
    <length>80</length>
    <type>Text</type>
</CustomField>