force-app/main/default/objects/Address__c/fields/Drop_Date_Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Drop_Date_Effective_From__c</fullName>
    <label>Drop Date Effective From</label>
    <type>Date</type>
</CustomField>