force-app/main/default/objects/Address__c/fields/Drop_Date_Effective_Thru__c.field-meta.xml
<CustomField>
    <fullName>Drop_Date_Effective_Thru__c</fullName>
    <label>Drop Date Effective Thru</label>
    <type>Date</type>
</CustomField>