force-app/main/default/objects/Address__c/fields/Drop_Flag_Valid_Address__c.field-meta.xml
<CustomField>
    <fullName>Drop_Flag_Valid_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drop Flag Valid Address</label>
    <type>Checkbox</type>
</CustomField>