force-app/main/default/objects/Address__c/fields/Drop_Id__c.field-meta.xml
<CustomField>
    <fullName>Drop_Id__c</fullName>
    <label>Drop Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>