force-app/main/default/objects/Address__c/fields/Drop_Number__c.field-meta.xml
<CustomField>
    <fullName>Drop_Number__c</fullName>
    <label>Drop Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>