force-app/main/default/objects/Address__c/fields/Drop_Physical_Outlets__c.field-meta.xml
<CustomField>
    <fullName>Drop_Physical_Outlets__c</fullName>
    <label>Drop Physical Outlets</label>
    <length>80</length>
    <type>Text</type>
</CustomField>