force-app/main/default/objects/Address__c/fields/Drop_Source_Create_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Drop_Source_Create_Datetime__c</fullName>
    <label>Drop Source Create Datetime</label>
    <type>DateTime</type>
</CustomField>