force-app/main/default/objects/Address__c/fields/Drop_Source_System_Code__c.field-meta.xml
<CustomField>
    <fullName>Drop_Source_System_Code__c</fullName>
    <label>Drop Source System Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>