force-app/main/default/objects/Address__c/fields/Drop_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Drop_Status_Code__c</fullName>
    <label>Drop Status Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>