force-app/main/default/objects/Address__c/fields/Drop_Status_Name__c.field-meta.xml
<CustomField>
    <fullName>Drop_Status_Name__c</fullName>
    <label>Drop Status Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Drop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>