force-app/main/default/objects/Address__c/fields/Drop_Type__c.field-meta.xml
<CustomField>
    <fullName>Drop_Type__c</fullName>
    <label>Drop Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Aerial Drop</fullName>
            </value>
            <value>
                <fullName>Underground Drop</fullName>
            </value>
            <value>
                <fullName>Shared Drop</fullName>
            </value>
            <value>
                <fullName>Temporary Drop</fullName>
            </value>
            <value>
                <fullName>Apartment Complex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>