force-app/main/default/objects/Address__c/fields/Drop_Update_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Drop_Update_Datetime__c</fullName>
    <label>Drop Update Datetime</label>
    <type>DateTime</type>
</CustomField>