force-app/main/default/objects/Address__c/fields/EDW_Address_dk__c.field-meta.xml
<CustomField>
    <fullName>EDW_Address_dk__c</fullName>
    <externalId>true</externalId>
    <label>EDW Address dk</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>