force-app/main/default/objects/Address__c/fields/EDW_Drop_dk__c.field-meta.xml
<CustomField>
    <fullName>EDW_Drop_dk__c</fullName>
    <externalId>true</externalId>
    <label>EDW Drop dk</label>
    <length>80</length>
    <type>Text</type>
</CustomField>