force-app/main/default/objects/Address__c/fields/Exchange_Zone_Code__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Zone_Code__c</fullName>
    <label>Exchange Zone Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>