force-app/main/default/objects/Address__c/fields/Exchange_Zone_Name__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Zone_Name__c</fullName>
    <label>Exchange Zone Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>