force-app/main/default/objects/Address__c/fields/Flag_CELC_Ready__c.field-meta.xml
<CustomField>
    <fullName>Flag_CELC_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag CELC Ready</label>
    <type>Checkbox</type>
</CustomField>