force-app/main/default/objects/Address__c/fields/Flag_Serviceable_Address__c.field-meta.xml
<CustomField>
    <fullName>Flag_Serviceable_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag Serviceable Address</label>
    <type>Checkbox</type>
</CustomField>