force-app/main/default/objects/Address__c/fields/FSA__c.field-meta.xml
<CustomField>
    <fullName>FSA__c</fullName>
    <label>FSA</label>
    <length>80</length>
    <type>Text</type>
</CustomField>