force-app/main/default/objects/Address__c/fields/Geolocation_Correction__c.field-meta.xml
<CustomField>
    <fullName>Geolocation_Correction__c</fullName>
    <description>Geolocation Correction</description>
    <inlineHelpText>Geolocation Correction</inlineHelpText>
    <label>Geolocation Correction</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>