force-app/main/default/objects/Address__c/fields/Int_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Int_Address_Line_2__c</fullName>
    <label>Int Address Line 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>