force-app/main/default/objects/Address__c/fields/Municipality_Name__c.field-meta.xml
<CustomField>
    <fullName>Municipality_Name__c</fullName>
    <label>Municipality Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>