force-app/main/default/objects/Address__c/fields/Province_Code__c.field-meta.xml
<CustomField>
    <fullName>Province_Code__c</fullName>
    <label>Province Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>