force-app/main/default/objects/Address__c/fields/Quadrant__c.field-meta.xml
<CustomField>
    <fullName>Quadrant__c</fullName>
    <label>Quadrant</label>
    <length>80</length>
    <type>Text</type>
</CustomField>