force-app/main/default/objects/Address__c/fields/Rate_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Rate_Group_Code__c</fullName>
    <label>Rate Group Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>