force-app/main/default/objects/Address__c/fields/Service_Branch__c.field-meta.xml
<CustomField>
    <fullName>Service_Branch__c</fullName>
    <label>Service Branch</label>
    <length>80</length>
    <type>Text</type>
</CustomField>