force-app/main/default/objects/Address__c/fields/Source_Create_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Source_Create_Datetime__c</fullName>
    <label>Source Create Datetime</label>
    <type>DateTime</type>
</CustomField>