force-app/main/default/objects/Address__c/fields/Station_Number__c.field-meta.xml
<CustomField>
    <fullName>Station_Number__c</fullName>
    <label>Station Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>