force-app/main/default/objects/Address__c/fields/Station_Type__c.field-meta.xml
<CustomField>
    <fullName>Station_Type__c</fullName>
    <label>Station Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>