force-app/main/default/objects/Address__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <description>Combination of various address fields to generate a standardized street address</description>
    <formula>TRIM(
IF(Suite_number__c != &#39;&#39;, Suite_number__c+&#39;-&#39;, &#39;&#39;) +
Civic_Address__c + &#39; &#39; +
Street_Name__c + &#39; &#39; +
Street_Type__c +
IF(Direction__c != &#39;&#39;, &#39; &#39; + Direction__c, &#39;&#39;) +
IF(City__c != &#39;&#39;, &#39;, &#39; + City__c , &#39;&#39;)
)</formula>
    <inlineHelpText>Combination of various address fields to generate a standardized street address</inlineHelpText>
    <label>Street Address</label>
    <type>Text</type>
</CustomField>