force-app/main/default/objects/Address__c/fields/Street_Type__c.field-meta.xml
<CustomField>
    <fullName>Street_Type__c</fullName>
    <label>Street Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>