force-app/main/default/objects/Address__c/fields/Suite_number__c.field-meta.xml
<CustomField>
    <fullName>Suite_number__c</fullName>
    <label>Suite Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>