force-app/main/default/objects/Address__c/fields/Wire_Center_Name__c.field-meta.xml
<CustomField>
    <fullName>Wire_Center_Name__c</fullName>
    <label>Wire Center Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>