force-app/main/default/objects/Address__c/fields/Wire_Centre_Code__c.field-meta.xml
<CustomField>
    <fullName>Wire_Centre_Code__c</fullName>
    <label>Wire Center Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>