force-app/main/default/objects/Address__c/listViews/Saskatchew.listView-meta.xml
<ListView>
    <fullName>Saskatchew</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>Address_Id__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>City__c</field>
        <operation>equals</operation>
    </filters>
    <label>Address Search List View</label>
</ListView>